# cantag

./: .gitignore  CRCCoder.cc  CRCCoder.hh  CircularOuterParams.hh  CircularTag.cc  CircularTag.hh  Coder.cc  Coder.hh  ConcentricEllipse.cc  ConcentricEllipse.hh  Config.hh  Doxyfile  DrawCircularOuter.cc  DrawTripOriginal.cc  Drawing.hh  Ellipse2D.cc  Ellipse2D.hh  Exception.cc  Exception.hh  GF4Coder.cc  GF4Coder.hh  GF4Poly.cc  GF4Poly.hh  GrayScaleFileImageSource.cc  GrayScaleFileImageSource.hh  IdentifyTagCircularOuter.cc  ImageSource.hh  Location2D.cc  Location2D.hh  Location3D.cc  Location3D.hh  Makefile  Makefile.am  MatrixTag.hh  README  Rectangle2D.cc  Rectangle2D.hh  RingTag.hh  SConstruct  Tag.cc  (+28 more)
command/: Makefile.am  Threshold.hh  cFollowContour.cc  cGrabImage.cc  cSaveImage.cc  cThresholdAdaptive.cc  cThresholdGlobal.cc
include/cantag/: Aggregation.hh  Apply.hh  Array.hh  AutoThresholdGlobal.hh  BigInt.hh  Bind.hh  Camera.hh  ComposeEntity.hh  ComposeEntityTree.hh  Config.hh  ContourRestrictions.hh  ConvexHullRestrictions.hh  ConvolutionFilter.hh  Correspondance.hh  Correspondances.hh  Correspondence.hh  CyclicBitSet.hh  DSVLImageSource.hh  Ellipse.hh  EllipseRestrictions.hh  EntityTree.hh  EstimateTransform.hh  FileImageSource.hh  Function.hh  GF4Poly.hh  GLImageSource.hh  GLOutputMechanism.hh  GLRenderWindow.hh  GetImageSource.hh  GlutRenderWindow.hh  IEEE1394ImageSource.hh  IEEE1394ImageSource_V1.hh  IEEE1394ImageSource_V2.hh  Image.hh  ImageOutputMechanism.hh  ImageSource.hh  Keypress.hh  LocatedObject.hh  Makefile.am  MonochromeImage.hh  (+28 more)
include/cantag/algorithms/: AccumulateCornerCorrespondences.hh  AccumulateCorrespondances.hh  AccumulateCorrespondences.hh  CheckEllipseAlgebraic.hh  CheckEllipseGradient.hh  CheckEllipseNakagawa.hh  CheckEllipseSafaeeRad.hh  CheckEllipseSafaeeRad2.hh  CheckEllipseStricker.hh  CompareBullseyeRadii.hh  ContourFollowerClearImageBorder.hh  ContourFollowerTree.hh  ConvertToGreyscale.hh  ConvexHull.hh  Convolution.hh  Decode.hh  DecodeAnalogue.hh  DistortionCorrection.hh  DistortionCorrectionIterative.hh  DistortionCorrectionNone.hh  DrawEntity.hh  DrawTagAnalogue.hh  DrawTagCircle.hh  DrawTagCircleSVG.hh  DrawTagSquare.hh  DrawTagSquareSVG.hh  Encode.hh  EstimateMaxSampleStrength.hh  ExtractGradients.hh  FitEllipseLS.hh  FitEllipseSimple.hh  FitQuadTangleConvexHull.hh  FitQuadTangleCorner.hh  FitQuadTanglePolygon.hh  FitQuadTangleRegression.hh  HoughTransform.hh  InvertGreys.hh  Makefile.am  PixelMapping.hh  PrintEntity.hh  (+19 more)
include/cantag/coders/: CRC.hh  CRCCoder.hh  CRCSymbolChunkCoder.hh  Coder.hh  GF4Coder.hh  Makefile.am  ParityCoder.hh  RawCoder.hh  SCCCoder.hh  SymbolChunkCoder.hh  TripOriginalCoder.hh
include/cantag/entities/: AnalogueEntity.hh  ContourEntity.hh  ConvexHullEntity.hh  DecodeEntity.hh  Entity.hh  HoughEntity.hh  Makefile.am  MaxSampleStrengthEntity.hh  ShapeEntity.hh  SignalStrengthEntity.hh  TransformEntity.hh
include/total/: Apply.hh  BigInt.hh  Bind.hh  Camera.hh  ComposeEntity.hh  ComposeEntityTree.hh  Config.hh  ContourEntity.hh  ContourFollower.hh  ContourRestrictions.hh  ContourTree.hh  CyclicBitSet.hh  Ellipse.hh  EllipseTransform.hh  Entity.hh  EntityTree.hh  FileImageSource.hh  GF4Poly.hh  GLImageSource.hh  GLOutputMechanism.hh  IEEE1394ImageSource.hh  Image.hh  ImageFilter.hh  ImageOutputMechanism.hh  ImageSource.hh  LocatedObject.hh  Makefile.am  MatrixTag.hh  MonochromeImage.hh  NLGaussJordanEliminator.hh  NLNLMAPExceptions.hh  NLNonLinearModel.hh  NLParameters.hh  QuadTangle.hh  QuadTangleTransform.hh  RingTag.hh  SceneGraph.hh  SceneGraphFunctional.hh  SceneGraphNode.hh  ShapeChain.hh  (+19 more)
include/total/coders/: Coder.hh  (+8 more)
samples/: CircleLocate.cc  DrawTag.cc  DrawTagAnalogueImage.cc  DrawTagImage.cc  DrawTagSVG.cc  FollowContour.cc  GLOutput.cc  GLOverlayCircle.cc  GLOverlaySquare.cc  GnuplotOutput.cc  Makefile.am  NewTest.cc  NewTest2.cc  NewTest3.cc  NewTest4.cc  NewTest5.cc  Permute.hh  PositioningTest.cc  SimpleRecogniseAnalogue.cc  SimpleRecogniseCircle.cc  SimpleRecogniseSquare.cc  TagDef.hh  TextOnly.cc  XOutput.cc  XOverlaySquare.cc
src/: AdaptiveThreshold.cc  AutoThresholdGlobal.cc  BigInt.cc  CRCCoder.cc  Camera.cc  Coder.cc  ContourEntity.cc  ContourFollower.cc  ContourTree.cc  DSVLImageSource.cc  Drawing.cc  Ellipse.cc  Ellipse2D.cc  EllipseFeatureDetector.cc  EllipseTransform.cc  EstimateTransform.cc  Exception.cc  FileImageSource.cc  GF4Coder.cc  GF4Poly.cc  GLImageSource.cc  GLOutputMechanism.cc  GLRenderWindow.cc  GaussianElimination.cc  GaussianMatrix.cc  GetImageSource.cc  GlobalThreshold.cc  GlutRenderWindow.cc  GrayScaleFileImageSource.cc  GrayScaleImageSource.cc  IEEE1394ImageSource.cc  IEEE1394ImageSource_V1.cc  IEEE1394ImageSource_V2.cc  Image.cc  ImageOutputMechanism.cc  ImageSegmentor.cc  LocatedObject.cc  Location3D.cc  Makefile.am  MatrixTag.cc  (+41 more)
src/algorithms/: ContourFollowerClearImageBorder.cc  ContourFollowerTree.cc  ConvexHull.cc  DecodeAnalogue.cc  DistortionCorrection.cc  DistortionCorrectionIterative.cc  DistortionCorrectionNone.cc  DrawEntity.cc  FitEllipseLS.cc  FitEllipseSimple.cc  FitQuadTangleConvexHull.cc  FitQuadTangleCorner.cc  FitQuadTanglePolygon.cc  FitQuadTangleRegression.cc  FullEllipseFit.cc  HoughTransform.cc  PrintEntity.cc  RemoveNonConcentricEllipse.cc  SampleTagAnalogue.cc  SignalStrengthContour.cc  SimpleEllipseFit.cc  SimulateMinDistance.cc  ThresholdAdaptive.cc  ThresholdGlobal.cc  TransformEllipseFull.cc  TransformEllipseLinear.cc  TransformQuadTangleCyberCode.cc  TransformQuadTangleProjective.cc  TransformQuadTangleReduced.cc  TransformQuadTangleSpaceSearch.cc
src/entities/: ContourEntity.cc
src/imagesources/: DSVLImageSource.cc  FileImageSource.cc  GLImageSource.cc  GetImageSource.cc  IEEE1394ImageSource_V1.cc  IEEE1394ImageSource_V2.cc  UEyeImageSource.cc  VFWImageSource.cc  VideoImageSource.cc
unit/: Makefile.am  TestBigInt.cc  TestCamera.cc  TestCoder.cc  TestContourTree.cc  TestDrawEllipsePoints.cc  TestEigen.cc  TestEllipse.cc  TestGaussian.cc  TestSceneGraph.cc  TestSegmentor.cc  TestSocket.cc  TestV4LImageSource.cc
(+143 files in other folders)
