SUBDIRS = algorithms coders entities
cantagincludedir = $(includedir)/total

cantaginclude_HEADERS =  BigInt.hh
cantaginclude_HEADERS += Camera.hh
cantaginclude_HEADERS += CompilationOptions.h
cantaginclude_HEADERS += Config.hh
cantaginclude_HEADERS += CyclicBitSet.hh
cantaginclude_HEADERS += FileImageSource.hh
cantaginclude_HEADERS += gaussianelimination.hh
cantaginclude_HEADERS += GF4Poly.hh
cantaginclude_HEADERS += GLImageSource.hh
cantaginclude_HEADERS += Image.hh
cantaginclude_HEADERS += ImageSource.hh
cantaginclude_HEADERS += LocatedObject.hh
cantaginclude_HEADERS += polysolve.hh
cantaginclude_HEADERS += Socket.hh
cantaginclude_HEADERS += Template.hh
cantaginclude_HEADERS += V4LImageSource.hh
cantaginclude_HEADERS += XOutputMechanism.hh
cantaginclude_HEADERS += SpeedMath.hh
cantaginclude_HEADERS += TagCircle.hh
cantaginclude_HEADERS += TagSquare.hh
cantaginclude_HEADERS += MonochromeImage.hh
cantaginclude_HEADERS += IEEE1394ImageSource.hh
cantaginclude_HEADERS += ContourRestrictions.hh
cantaginclude_HEADERS += TagSpec.hh
cantaginclude_HEADERS += EllipseRestrictions.hh
cantaginclude_HEADERS += VideoImageSource.hh
cantaginclude_HEADERS += VideoOutputMechanism.hh
cantaginclude_HEADERS += EstimateTransform.hh
cantaginclude_HEADERS += Correspondence.hh
cantaginclude_HEADERS += TagDictionary.hh

if HAVE_GSL_MULTIMIN_H
if HAVELIB_GSLCBLAS
if HAVELIB_GSL
cantaginclude_HEADERS += EstimateTransform.hh
endif
endif
endif


# disabled ImageOutputMechanism.hh GLOutputMechanism.hh TextOutputMechanism.hh
# obsolete findtransform.hh Tags.hh Tag.hh MatrixTag.hh RingTag.hh TemplateTag.hh WorldState.hh XOutputStagesMechanism.hh
