SUBDIRS = algorithms
totalincludedir = $(includedir)/total
totalinclude_HEADERS = BigInt.hh Camera.hh Coder.hh CompilationOptions.h Config.hh ContourTree.hh CRCCoder.hh CyclicBitSet.hh FileImageSource.hh findtransform.hh gaussianelimination.hh GF4Coder.hh GF4Poly.hh GLImageSource.hh GLOutputMechanism.hh Image.hh ImageSource.hh LocatedObject.hh MatrixTag.hh ParityCoder.hh polysolve.hh RingTag.hh SCCCoder.hh ShapeChain.hh ShapeTree.hh Socket.hh SymbolChunkCoder.hh Tag.hh Tags.hh Template.hh TemplateTag.hh TextOutputMechanism.hh TripOriginalCoder.hh V4LImageSource.hh WorldState.hh XOutputMechanism.hh XOutputStagesMechanism.hh EllipseTransform.hh QuadTangleTransform.hh ImageOutputMechanism.hh RawCoder.hh SpeedMath.hh ContourFollower.hh Entity.hh IEEE1394ImageSource.hh
